--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,14 @@
-* ab89d36 
+* b044068 
+|  2015-07-17 
+|  Kostya Zolotarov 
+|  Added vagrant box name variable check (HEAD, origin/development, development) 
+|  
+* d11e63e 
 |  2015-07-13 
 |  Kostya Zolotarov 
-|  Added 'if_vagrant_box_exists()' function (HEAD, origin/development, development) 
+|  Added 'if_vagrant_box_exists()' function 
 |  
 * 452e1b2 
    2015-07-13 
    Kostya Zolotarov 
-   Initialized the repository (origin/master, master) 
+   Initialized the repository (origin/master) 
