--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Collection of Vagrant helper scripts and utilities.
 
 [2] VERSION ------------------------------------------------------------------
 
-0.0.0.2
+0.0.0.4
 
 [3] AUTHORS ------------------------------------------------------------------
 
@@ -19,38 +19,114 @@ library of re-usable code.
 [5] FILES --------------------------------------------------------------------
 
 .
-├── [kostya.zolotarov          46 Jul 13 15:21]  ./AUTHORS
-├── [kostya.zolotarov         178 Jul 13 14:28]  ./BACKGROUND
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./BUILD
-├── [kostya.zolotarov         121 Jul 13 15:21]  ./CHANGELOG
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./DEFECTS
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./DEPENDENCIES
-├── [kostya.zolotarov          49 Jul 13 14:18]  ./DESCRIPTION
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./DESIGN
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./EXAMPLES
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./FEATURES
-├── [kostya.zolotarov           0 Jul 13 15:21]  ./FILES
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./INSTALL
-├── [kostya.zolotarov        1981 Jul 13 15:20]  ./library.vagrant.sh
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./LICENSE
-├── [kostya.zolotarov        1849 Jul 13 14:28]  ./README
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./REQUIREMENTS
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./SOURCES
-├── [kostya.zolotarov           0 Jul 13 14:04]  ./TASKS
-├── [kostya.zolotarov           0 Jul 13 13:57]  ./TEST
-├── [kostya.zolotarov           8 Jul 13 14:04]  ./VERSION
+|--  ./API
+|--  ./AUTHORS
+|--  ./BACKGROUND
+|--  ./BUILD
+|--  ./CHANGELOG
+|--  ./DEFECTS
+|--  ./DEPENDENCIES
+|--  ./DESCRIPTION
+|--  ./DESIGN
+|--  ./EXAMPLES
+|--  ./FEATURES
+|--  ./FILES
+|--  ./INSTALL
+|--  ./library.vagrant.sh
+|--  ./LICENSE
+|--  ./README
+|--  ./REQUIREMENTS
+|--  ./SOURCES
+|--  ./TASKS
+|--  ./TEST
+\--  ./VERSION
 
-0 directories, 20 files
+21 files
 
-[6] CHANGELOG ----------------------------------------------------------------
+[6] API ----------------------------------------------------------------------
 
-* ab89d36 
+ FUNCTION:
+
+   is_vagrant_box_installed
+
+ BACKGROUND:
+
+   If Vagrant box you are trying to add with 'vagrnat box add <box name>'
+   already exists, Vagrant will throw the following error - "The box
+   you are attempting to add already exists. Remove it before adding
+   it again or add it with the '--force' flag."
+
+ DESCRIPTION:
+
+   This function returns 0 if a particular Vagrant box already exists 
+   or, in other words, the box with the same name has previously been 
+   added with 'vagrant box add <box name>' command.
+
+ EXAMPLES:
+
+   1) Invocation in Bash terminal
+
+       $ source library.vagrant.sh
+       $ is_vagrant_box_installed centos-6.5-amd64-box
+
+   2) Inclusion in Bash script 
+
+       #!/usr/bin/env bash 
+       . library.vagrant.sh
+       vagrant_box_name=$1
+       if [ is_vagrant_box_installed $vagrant_box_name ]; then 
+           # Your code here... 
+       fi
+
+[7] EXAMPLES -----------------------------------------------------------------
+
+1) Invocation in Bash terminal
+
+    $ source library.vagrant.sh
+
+2) Inclusion in Bash script 
+
+    #!/usr/bin/env bash 
+    . library.vagrant.sh
+
+[8] CHANGELOG ----------------------------------------------------------------
+
+* b044068 
+|  2015-07-17 
+|  Kostya Zolotarov 
+|  Added vagrant box name variable check (HEAD, origin/development, development) 
+|  
+* d11e63e 
 |  2015-07-13 
 |  Kostya Zolotarov 
-|  Added 'if_vagrant_box_exists()' function (HEAD, origin/development, development) 
+|  Added 'if_vagrant_box_exists()' function 
 |  
 * 452e1b2 
    2015-07-13 
    Kostya Zolotarov 
-   Initialized the repository (origin/master, master) 
+   Initialized the repository (origin/master) 
+
+[9] LICENSE ------------------------------------------------------------------
+
+The MIT License (MIT)
+
+Copyright (c) 2015 Kostya Zolotarov
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
 
